--- a/css/button.css
+++ b/css/button.css
@@ -1,14 +1,5 @@
-
-.menu {
-    display: flex;
-    padding: 10px;
-    gap: 10px;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.menu button {
-    padding: 8px 16px;
+button {
+    padding: 6px;
     font-size: 1rem;
     color: #fff;
     background-color: var(--primary-color);
@@ -18,6 +9,6 @@
     transition: background-color 0.3s;
 }
 
-.menu button:hover {
+button:hover {
     background-color: var(--secondary-color);
 }
