--- a/css/global.css
+++ b/css/global.css
@@ -30,6 +30,12 @@ h2 {
     margin: 4px;
 }
 
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .title {
     display: flex;
     align-items: center;
