--- a/css/global.css
+++ b/css/global.css
@@ -45,7 +45,7 @@ h2 {
 .ratel-logo {
     width: 64px; 
     height: 64px;
-    margin-right: 10px;
+    margin: 10px;
 }
 
   /* Responsive Design */
