--- a/css/timeline-section.css
+++ b/css/timeline-section.css
@@ -4,12 +4,14 @@
 
 .non-highlighted {
     box-sizing: border-box;
-    border: 0px solid;
+    border: 0px;
+    outline: 0px solid;
 }
 
 .highlighted {
     box-sizing: border-box;
-    border: 2px solid var(--highlight-color);
+    border: 0px;
+    outline: 2px solid var(--highlight-color);
 }
 
 .domain-tooltip {
