--- a/css/global.css
+++ b/css/global.css
@@ -3,12 +3,13 @@
     --secondary-color: #284b63;
     --primary-bg: #e8e9f3;
     --secondary-bg: #ffffff;
-    --primary-tl: #f5f5f8;
-    --secondary-tl: #ffffff;
     --text-color: #353535;
     --border-color: #ddd;
     --highlight-color: #db3232;
     --selected-color: #bcbe10;
+    --lvl1-group-color:#ececec;
+    --lvl-mid-group-color:#eeeeeeee;
+    --lvl-last-group-color:#00000000;
 }
 
 body {
@@ -43,9 +44,53 @@ h2 {
 }
 
 .ratel-logo {
-    width: 64px; 
-    height: 64px;
     margin: 10px;
+}
+
+.info-container {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    display: inline-block;
+    z-index: 9999;
+}
+.info-icon {
+    background-color: var(--secondary-color);
+    color: white;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.tooltip {
+    display: none;
+    position: absolute;
+    top: 30px;
+    right: 0;
+    background-color: white;
+    color: var(--text-color);
+    border: 1px solid #ccc;
+    padding: 10px;
+    width: 250px; /* Set a max width for the tooltip */
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    white-space: normal;  /* Allow wrapping */
+    word-wrap: break-word; /* Break long words if needed */
+}
+
+.info-container:hover .tooltip {
+    display: block;
+}
+
+.tooltip ul {
+    padding-left: 20px;
+    margin: 5px 0;
 }
 
   /* Responsive Design */
